--- a/src/website/templates/website/order.html
+++ b/src/website/templates/website/order.html
@@ -53,7 +53,7 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="row">
-                    <div class="col-7">
+                    <div class="col-12 col-md-7">
 
                         <!-- Billing info start -->
                         <div class="billing_form mb_50">
@@ -73,7 +73,7 @@
                         </div>
 
                     </div>
-                    <div class="col-5">
+                    <div class="col-12 col-md-5">
                             <h4 class="form_title mb_30">Items details</h4>
                             <div class="form_wrap ">
                                 <div class="billing_form aos-init" data-aos="fade-up" data-aos-duration="2000">
