Desin Update Invoice

--- a/src/administration/admins/templates/admins/order_invoice.html
+++ b/src/administration/admins/templates/admins/order_invoice.html
@@ -63,7 +63,7 @@
                                 <p class="mb-1">{{ object.email }}</p>
                                 <p class="mb-1">{{ object.contact }}</p>
                                 {% if object.gst_in %}
-                                    <p class="mb-1">CSGT: {{ object.gst_in }}</p>
+                                    <p class="mb-1">GST IN: {{ object.gst_in }}</p>
                                 {% endif %}
                             </div>
                         </div>
