--- a/src/administration/admins/templates/admins/product_detail.html
+++ b/src/administration/admins/templates/admins/product_detail.html
@@ -196,6 +196,21 @@
                                                 </tr>
 
                                                 <tr>
+                                                    <th scope="row">IGST</th>
+                                                    <td>{{ object.igst }}</td>
+                                                </tr>
+
+                                                <tr>
+                                                    <th scope="row">CGST</th>
+                                                    <td>{{ object.cgst }}</td>
+                                                </tr>
+
+                                                <tr>
+                                                    <th scope="row">SGST</th>
+                                                    <td>{{ object.sgst }}</td>
+                                                </tr>
+
+                                                <tr>
                                                     <th scope="row">Average Review</th>
                                                     <td>{{ object.average_review|safe }}
                                                     </td>
