--- a/src/website/templates/website/franchise.html
+++ b/src/website/templates/website/franchise.html
@@ -79,6 +79,8 @@
 
                                         </div>
                                     </div>
+                                    <button type="submit"
+                                            class="btn custom_btn rounded-pill py-3 text-white text-uppercase">Submit <i class="fas fa-long-arrow-alt-right"></i></button>
                                 </form>
                             </div>
 
