--- a/src/administration/admins/templates/admins/product_form.html
+++ b/src/administration/admins/templates/admins/product_form.html
@@ -239,24 +239,25 @@
                                             </ul>
                                         {% endif %}
                                     </div>
-                                    <div class="col-lg-4">
+                                 <div class="col-lg-4">
                                         <div class="mb-4">
-                                            <label for="{{ form.igst.id_for_label }}"
-                                                   class="form-label">{{ form.igst.label }}</label>
-                                            {% render_field form.igst class="form-control" %}
-                                            <small class="form-text text-muted">{{ form.igst.help_text }}</small>
-                                            {% if form.igst.errors %}
+                                            <label for="{{ form.hsn_code.id_for_label }}"
+                                                   class="form-label">{{ form.hsn_code.label }}</label>
+                                            {% render_field form.hsn_code class="form-control" %}
+                                            <small class="form-text text-muted">{{ form.hsn_code.help_text }}</small>
+                                            {% if form.hsn_code.errors %}
                                                 <ul class="text-danger">
-                                                    {% for error in form.igst.errors %}
+                                                    {% for error in form.hsn_code.errors %}
                                                         <li>{{ error }}</li>
                                                     {% endfor %}
                                                 </ul>
                                             {% endif %}
                                         </div>
                                     </div>
+
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <label for="{{ form.sgst.id_for_label }}"
                                                class="form-label">{{ form.sgst.label }}</label>
                                         {% render_field form.sgst class="form-control" placeholder='' %}
@@ -269,7 +270,7 @@
                                             </ul>
                                         {% endif %}
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <div class="mb-4">
                                             <label for="{{ form.cgst.id_for_label }}"
                                                    class="form-label">{{ form.cgst.label }}</label>
@@ -284,6 +285,22 @@
                                             {% endif %}
                                         </div>
                                     </div>
+                                 <div class="col-lg-4">
+                                        <div class="mb-4">
+                                            <label for="{{ form.igst.id_for_label }}"
+                                                   class="form-label">{{ form.igst.label }}</label>
+                                            {% render_field form.igst class="form-control" %}
+                                            <small class="form-text text-muted">{{ form.igst.help_text }}</small>
+                                            {% if form.igst.errors %}
+                                                <ul class="text-danger">
+                                                    {% for error in form.igst.errors %}
+                                                        <li>{{ error }}</li>
+                                                    {% endfor %}
+                                                </ul>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
