--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -25,8 +25,7 @@
                                 <h2 class="text-center mb-4">{% blocktrans with provider.name as provider %}Sign In Via
                                     {{ provider }}{% endblocktrans %}</h2>
 
-                                <p>{% blocktrans with provider.name as provider %}You are about to sign in using a third
-                                    party account from {{ provider }}.{% endblocktrans %}</p>
+                                <p>{% blocktrans with provider.name as provider %}{% endblocktrans %}</p>
                             {% endif %}
 
                             <form method="post">
