--- a/src/administration/admins/templates/admins/base.html
+++ b/src/administration/admins/templates/admins/base.html
@@ -13,15 +13,15 @@
     </title>
 
     {# GLOBAL CSS #}
-<link rel="icon" href="{% static 'website/logos/logo-light.png' %}" type="image/x-icon"/>
+    <link rel="icon" href="{% static 'website/logos/logo-light.png' %}" type="image/x-icon"/>
     <link rel="shortcut icon" href="{% static 'website/logos/logo-light.png' %}" type="image/x-icon"/>
     <link href="{% static 'admin/css/tabler.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/tabler-flags.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/tabler-payments.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/tabler-vendors.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/demo.min.css' %}?1668287865" rel="stylesheet"/>
-{#    <link href="{% static 'core/css/icons.css' %}" rel="stylesheet"/>#}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    {#    <link href="{% static 'core/css/icons.css' %}" rel="stylesheet"/>#}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <script src="{% static 'required/js/jquery-3.6.2.slim.min.js' %}"></script>
@@ -93,6 +93,11 @@
     <!-- Tabler Core -->
     <script src="{% static 'admin/js/tabler.min.js' %}?1668287865" defer></script>
     <script src="{% static 'admin/js/demo.min.js' %}?1668287865" defer></script>
+
+
+    {% block base_notifications %}
+        <script src="{% static 'notification/notify.js' %}" type="text/javascript"></script>
+    {% endblock %}
     {# INTERNAL SCRIPTS #}
     {% block base_internal_scripts %}
 
