Design:Link added in Recend order at admin dashboard

--- a/src/administration/admins/templates/admins/dashboard.html
+++ b/src/administration/admins/templates/admins/dashboard.html
@@ -138,7 +138,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="text">
-                        <a href="#" class="mb-0  float-end"><i class="fa fa-eye"></i> view all</a>
+                        <a href="{% url 'admins:order-list' %}" class="mb-0  float-end"><i class="fa fa-eye"></i> view all</a>
                         <h6 class="mb-0 card-title">Recent Orders</h6>
                     </div>
                 </div>
