--- a/src/website/templates/website/franchise.html
+++ b/src/website/templates/website/franchise.html
@@ -75,6 +75,7 @@
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Address</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1"
+                                                   placeholder="ADD WHERE YOU WANTED MENTION IN ADDRESS BOX"
                                                    aria-describedby="emailHelp">
 
                                         </div>
