--- a/src/website/templates/website/order.html
+++ b/src/website/templates/website/order.html
@@ -105,17 +105,17 @@
                                                             </td>
                                                             <td>
                                                     <span class="price_text">{% if obj.product_weight %}
-                                                        {{ obj.product_weight.get_product_weight_discounted_price }}{% else %}
-                                                        {{ obj.product.get_price }}{% endif %}</span>
+                                                        {{ obj.product_weight.get_discounted_price_with_tax }}{% else %}
+                                                        {{ obj.product.get_discounted_price_with_tax }}{% endif %}</span>
                                                             </td>
                                                             <td>
                                                                 <span class="quantity_text">{{ obj.quantity }}</span>
                                                             </td>
                                                             <td> <span class="quantity_text">
                                                         {% if obj.product_weight %}
-                                                            {{ obj.quantity|multiply:obj.product_weight.get_product_weight_discounted_price }}
+                                                            {{ obj.quantity|multiply:obj.product_weight.get_discounted_price_with_tax }}
                                                         {% else %}
-                                                            {{ obj.quantity|multiply:obj.product.get_price }}
+                                                            {{ obj.quantity|multiply:obj.product.get_discounted_price_with_tax }}
                                                         {% endif %}
                                                           </span>
                                                             </td>
