--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -222,9 +222,9 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                    <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
                                                     {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
+                                                        <del>{{ product.get_price_with_tax }}</del>
                                                     {% endif %}
                                                 </div>
                                             </div>
@@ -288,9 +288,9 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                     <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
                                                     {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
+                                                        <del>{{ product.get_price_with_tax }}</del>
                                                     {% endif %}
                                                 </div>
                                             </div>
@@ -354,9 +354,9 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                       <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
                                                     {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
+                                                        <del>{{ product.get_price_with_tax }}</del>
                                                     {% endif %}
                                                 </div>
                                             </div>
@@ -420,9 +420,9 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                     <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
                                                     {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
+                                                        <del>{{ product.get_price_with_tax }}</del>
                                                     {% endif %}
                                                 </div>
                                             </div>
@@ -486,9 +486,9 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                       <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
                                                     {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
+                                                        <del>{{ product.get_price_with_tax }}</del>
                                                     {% endif %}
                                                 </div>
                                             </div>
@@ -552,9 +552,9 @@
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
-                                                    <span class="sale_price pe-1">{{ product.get_price }}</span>
+                                                       <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
                                                     {% if product.discount %}
-                                                        <del>{{ product.price }}</del>
+                                                        <del>{{ product.get_price_with_tax }}</del>
                                                     {% endif %}
                                                 </div>
                                             </div>
@@ -715,10 +715,10 @@
                                            target="_blank">{{ product.title }}</a>
                                     </h3>
                                     <div class="product_price">
-                                        <span class="sale_price pe-1">{{ product.get_price }}</span>
-                                        {% if product.discount %}
-                                            <del>{{ product.price }}</del>
-                                        {% endif %}
+                                           <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
+                                                    {% if product.discount %}
+                                                        <del>{{ product.get_price_with_tax }}</del>
+                                                    {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -799,10 +799,10 @@
                                            target="_blank">{{ product.title }}</a>
                                     </h3>
                                     <div class="product_price">
-                                        <span class="sale_price pe-1">{{ product.get_price }}</span>
-                                        {% if product.discount %}
-                                            <del>{{ product.price }}</del>
-                                        {% endif %}
+                                         <span class="sale_price pe-1">{{ product.get_discounted_price_with_tax }}</span>
+                                                    {% if product.discount %}
+                                                        <del>{{ product.get_price_with_tax }}</del>
+                                                    {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -849,8 +849,8 @@
                                         </a>
                                     </div>
                                     <div class="offer_item_price">
-                                        <span>{{ product.get_price }}</span>
-                                        <del>{% if product.discount %}{{ product.discount }}{% endif %}</del>
+                                        <span>{{ product.get_discounted_price_with_tax }}</span>
+                                        <del>{% if product.discount %}{{ product.get_price_with_tax }}{% endif %}</del>
                                     </div>
                                     <div class="offer_item_desc">
                                         <p>{{ product.description|safe|slice:50 }}</p>
